@@ -1,3 +1,4 @@
 all:
+	(cd ../pio_dirs/StepperDemo; pio run -e esp32 -t upload)
 	./seq_01.sh
 	./seq_02.sh
