@@ -537,9 +537,6 @@ void FastAccelStepper::setDelayToDisable(uint16_t delay_ms) {
   }
   _off_delay_count = max(delay_count, 1);
 }
-int8_t FastAccelStepper::setAcceleration(uint32_t accel) {
-  return _rg.setAcceleration(accel);
-}
 int8_t FastAccelStepper::moveTo(int32_t position) {
   return _rg.moveTo(position, &fas_queue[_queue_num].queue_end);
 }
